2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/httpstreamersteps.py:
	Set the port from the porter and don't use the default one.
	Fixes #1209

2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* data/glade/consumption-wizard.glade:
	* flumotion/scenario/steps/consumptionsteps.py:
	Added the callbacks for the disk consumer checkboxes so the forward
	button is enabled/disabled properly.
	Fixes #1125

2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py:
	Added a remote method to allow schedulling recordings with an ical
	file from the admin window.
	Fixes #1178

2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* data/glade/ondemand-wizard.glade:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/component/plugs/base.py:
	* flumotion/scenario/steps/ondemandstep.py:
	* flumotion/ui/fileselector.py:
	Added an optional apache logger to the on demand wizard page.
	Fixes #947

2009-01-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Xavier Queralt Mateu  <xqueralt@flumotion.com>
	patch by: Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Deleted unused code when obtaining firewire audio production step.
	Fixes #949

2009-01-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>
	
	reviewed by: Xavier Queralt Mateu  <xqueralt@flumotion.com>
	patch by: Pedro Gracia  <pedro@flumotion.com>

	* flumotion/component/encoders/smoke/smoke.py:
	Warn the user about the bug #565441 of Gstreamer smoke encoder.
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	The smoke wizard page now uses the settings set by the user.
	Fixes #891

2009-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>
