@@ -331,6 +331,7 @@ class TestWizardSave(testsuite.TestCase):
              '      </eater>\n'
              '      \n'
              '      <property name="burst-on-connect">False</property>\n'
+             '      <property name="port">8080</property>\n'
              '      <property name="porter-password">password</property>\n'
              '      <property name="porter-socket-path">flu-XXXX.socket'
              '</property>\n'
@@ -428,6 +429,7 @@ class TestWizardSave(testsuite.TestCase):
              '      </eater>\n'
              '      \n'
              '      <property name="burst-on-connect">False</property>\n'
+             '      <property name="port">8080</property>\n'
              '      <property name="porter-password">password</property>\n'
              '      <property name="porter-socket-path">flu-XXXX.socket'
              '</property>\n'
@@ -564,6 +566,7 @@ class TestWizardSave(testsuite.TestCase):
              '      </eater>\n'
              '      \n'
              '      <property name="burst-on-connect">False</property>\n'
+             '      <property name="port">8080</property>\n'
              '      <property name="porter-password">password</property>\n'
              '      <property name="porter-socket-path">flu-XXXX.socket'
              '</property>\n'
@@ -653,6 +656,7 @@ class TestWizardSave(testsuite.TestCase):
              '      </eater>\n'
              '      \n'
              '      <property name="burst-on-connect">False</property>\n'
+             '      <property name="port">8080</property>\n'
              '      <property name="porter-password">password</property>\n'
              '      <property name="porter-socket-path">flu-XXXX.socket'
              '</property>\n'
@@ -776,6 +780,7 @@ class TestWizardSave(testsuite.TestCase):
              '      </eater>\n'
              '      \n'
              '      <property name="burst-on-connect">False</property>\n'
+             '      <property name="port">8080</property>\n'
              '      <property name="porter-password">password</property>\n'
              '      <property name="porter-socket-path">flu-XXXX.socket'
              '</property>\n'
@@ -917,6 +922,7 @@ class TestWizardSave(testsuite.TestCase):
              '      \n'
              '      <property name="bandwidth-limit">123000000</property>\n'
              '      <property name="burst-on-connect">False</property>\n'
+             '      <property name="port">8080</property>\n'
              '      <property name="porter-password">password</property>\n'
              '      <property name="porter-socket-path">flu-XXXX.socket'
              '</property>\n'
