@@ -1,6 +1,12 @@
 2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/scenario/steps/httpstreamersteps.py:
+	* flumotion/test/test_wizard_save.py:
+	Fixed the tests for the last changes done.
+
+2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/scenario/steps/httpstreamersteps.py:
 	Set the port from the porter and don't use the default one.
 	Fixes #1209
 
